--- a/app/assets/stylesheets/lesson.scss
+++ b/app/assets/stylesheets/lesson.scss
@@ -39,6 +39,15 @@
   display: flex;
   align-items: flex-end;
 }
+.lesson-label{
+  padding-left: 3px;
+  width: 100%;
+  text-align: left;
+}
+.lesson-label-small{
+  font-size: 10px;
+  font-weight: lighter;
+}
 #browser-instructors-cta, #lesson_submit_action{
   position: relative !important;
 }
